// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageButton /> Snapshot should match snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out,font-weight 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out,font-weight 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #f2f2f2;
  border: 1px solid #cccccc;
  color: #4c4c4c;
  font-size: 16px;
  font-weight: normal;
  margin: 0 4px;
  padding: 4px 8px;
}

.c0:hover,
.c0:focus {
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

<a
  className="c0"
  onClick={[Function]}
>
  50
</a>
`;

exports[`<PageButton /> Snapshot should match snapshot with active prop 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out,font-weight 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out,font-weight 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #f2f2f2;
  font-size: 16px;
  font-weight: 700;
  margin: 0 4px;
  padding: 4px 8px;
}

.c0:hover,
.c0:focus {
  background-color: #062ab3;
  border-color: #062ab3;
  color: #f2f2f2;
}

<a
  className="c0"
  onClick={[Function]}
>
  10
</a>
`;
